<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" 
        android:textSize="26dp"
        
        android:drawableLeft="@drawable/hip"/>

    <Button
        android:id="@+id/ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text="@string/ayuda"
        android:onClick="PasarAyuda" />

    <Button
        android:id="@+id/empezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ayuda"
        android:layout_centerHorizontal="true"
        android:text="@string/empezar_prueba"
        android:onClick="PasarEmpezar" />
    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ayuda"
        android:layout_centerVertical="true"
        android:text="@string/salir"
        android:onClick="PasarSalir" />

</RelativeLayout>