<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <TextView
        android:id="@+id/res_prueba"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/res_prueba"
        android:textAlignment="center"
        android:textSize="12sp" />

	<TextView
	    android:id="@+id/data"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/res_prueba"
	    android:layout_below="@+id/res_prueba"
	    android:layout_marginTop="40dp"
	    android:text="@string/data"
	    android:textSize="12sp" />
	
	<TextView
        android:id="@+id/log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
		android:layout_below="@+id/datos_data"
        android:layout_marginTop="161dp"
        android:text="@string/log"
        android:textSize="12sp" />
	
	 <TextView
		android:id="@+id/email"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/datos_data"
		android:layout_below="@+id/datos_log"
		android:layout_marginTop="17dp"
		android:text="@string/email"
		android:textAlignment="center"
		android:textSize="12sp" 
		/>
	
	
	 <EditText
             android:id="@+id/datos_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/log"
             android:layout_below="@+id/data"
             android:ems="10"
             android:inputType="text" />
     <EditText
             android:id="@+id/datos_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/data"
             android:layout_below="@+id/email"
             android:ems="10"
             android:inputType="textEmailAddress"
             android:onClick="Valorlog" />
             
     <EditText
             android:id="@+id/datos_log"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/email"
             android:layout_below="@+id/log"
             android:ems="10"
             android:inputType="text" 
             />

         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/button2"
             android:layout_below="@+id/datos_email"
             android:layout_marginTop="30dp"
             android:drawableLeft="@drawable/mail"
             android:onClick="PasarEnvio"
             android:text="@string/enviar" />

         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/button1"
             android:layout_centerHorizontal="true"
             android:drawableLeft="@drawable/atras"
             android:onClick="Repetir"
             android:text="@string/repetir" />
   
</RelativeLayout>