<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <TextView
        android:id="@+id/configurar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuracion"
        android:textSize="26dp" 
        android:drawableStart="@drawable/config"/>

    <Button
        android:id="@+id/empezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="168dp"
        android:onClick="PasarPrueba"
        android:text="@string/empezar" />
         <requestFocus />

         <EditText
             android:id="@+id/edittext"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/empezar"
             android:layout_alignLeft="@+id/edittext2"
             android:layout_marginBottom="15dp"
             android:ems="10"
             android:inputType="text"
             android:selectAllOnFocus="True" 
             android:drawableStart="@drawable/clock"/>

         <TextView
             android:id="@+id/alias"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/edittext2"
             android:layout_below="@+id/configurar"
             android:layout_marginTop="27dp"
             android:text="@string/alias" />

         <EditText
             android:id="@+id/edittext2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/ensayos"
             android:layout_below="@+id/alias"
             android:drawableStart="@drawable/user"
             android:ems="10"
             android:inputType="text"
             android:selectAllOnFocus="True" />

         <TextView
             android:id="@+id/ensayos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/edittext"
             android:layout_toLeftOf="@+id/empezar"
             android:text="@string/ensayos" />

</RelativeLayout>