<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <TextView
        android:id="@+id/ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayuda" 
        android:drawableLeft="@drawable/ic_menu_help"
        android:textSize="26dp"/>
    <TextView
        android:id="@+id/textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/text" 
        android:textSize="12dp"/>

    <Button
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="52dp"
        android:drawableLeft="@drawable/atras"
        android:onClick="PasarVolver"
        android:text="@string/volver" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/volver"
        android:layout_below="@+id/textview"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/ayuda"
        android:src="@drawable/ayuda_im" />

</RelativeLayout>