<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <EditText
        android:id="@+id/dat_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="20"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/dat_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dat_email"
        android:layout_marginTop="19dp"
        android:ems="20"
        android:inputType="text" />

    <EditText
        android:id="@+id/data_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dat_log"
        android:layout_marginTop="36dp"
        android:ems="50"
        android:singleLine="false"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="98dp"
        android:text="@string/send" />

    <Button
        android:id="@+id/discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/save"
        android:layout_alignBottom="@+id/save"
        android:layout_alignRight="@+id/data_v"
        android:text="@string/discard"
        android:onClick="Discard" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/send"
        android:layout_alignBottom="@+id/send"
        android:layout_toLeftOf="@+id/discard"
        android:text="@string/save" />

</RelativeLayout>